streaming/sabnzbd/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
        - name: sabnzbd
          image: lscr.io/linuxserver/sabnzbd:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /config
              name: sabnzbd-config

            - mountPath: /incomplete-downloads
              name: sabnzbd-data
              subPath: usenet/incomplete

            - mountPath: /downloads
              name: sabnzbd-data
              subPath: usenet/complete

            - mountPath: /data/media
              name: sabnzbd-data
              subPath: usenet

      volumes:
        - name: sabnzbd-data
          hostPath:
            path: /mnt/media
            type: DirectoryOrCreate

        - name: sabnzbd-config
          hostPath:
            path: /var/lib/sabnzbd/config
            type: DirectoryOrCreate
