streaming/sabnzbd/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: streaming
spec:
  selector:
    app: sabnzbd
  ports:
    - port: 80
      targetPort: 8080
